# Hamband

./: .gitignore  HOWTO.txt  Makefile  Notes.txt  README.md  cart-res.sh~  compile.sh~  extract-responsetime.sh  extract-responsetime.sh~  extract.sh  extract.sh~  follower.old  kill-memcached.sh  load_modules.sh  load_modules.sh~  myrun.sh  run-crdt.sh  run-crdt.sh~  run.sh  run.sh~  runall.sh  runcrdt.sh
application/account/: bank_account.cpp
conn/: conanfile.py
conn/src/: context.hpp  exchanger.cpp  exchanger.hpp  rc.cpp  rc.hpp
crash-consensus/: conanfile.py  conanfile.py~
ctrl/: conanfile.py
ctrl/src/: block.cpp  (+1 more)
demo/: build.sh~  conanfile.py  run.sh  run.sh~  xclusive
log/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py  conaninfo.txt  graph_info.json
mem/: conanfile.py
shared/: conanfile.py
tcpchat/: Exception.cpp  Semaphore.cpp  ServerConnection.cpp  ServersCommunicationLayer.cpp  Socket.cpp  Time.cpp  getch.cpp  tcp-main-crdt  tcp-main-crdt.cpp
tcpcrdt/: CMakeLists.txt  Makefile  ServerConnection.cpp  ServersCommunicationLayer.cpp  Socket.cpp  Thread.cpp  compile.sh  run-tcp-crdt.sh  run.sh  runall.sh  tcp-main-crdt.cpp
wellcoordination/: build.sh  build.sh~  conanfile.py  conanfile.py~  config.h  hamsaz  mu  perf.data  perf.data.old
wellcoordination/src/: CMakeLists.txt  account-benchmark.cpp  account.hpp  band-crdt.hpp  band-main-crdt-failure.cpp  band-main-crdt.cpp  band-main-failure.cpp  band-main.cpp  band-nb.hpp  bank_account.hpp  beb.hpp  cart-benchmark.cpp  cart.hpp  counter-benchmark.cpp  counter.hpp  courseware-benchmark.cpp  courseware.hpp  cuckoo_table_template.cc  cuckoohash_config.hh  cuckoohash_map.hh  generate  generate.cpp  gset-benchmark.cpp  gset.hpp  hamsaz-main.cpp  hamsaz-nb.hpp  main.cpp  movie-benchmark.cpp  movie.hpp  mu-courseware.hpp  mu-main.cpp  mu.hpp  nb-protocol-courseware.hpp  nb-protocol.hpp  old-benchmark.cpp  orset.hpp  project.hpp  rb-crdt.hpp  register-benchmark.cpp  register.hpp  (+6 more)
(+84 files in other folders)
